[package]
name = "energyleaf-zb"
version = "0.1.1"
authors = ["Simon <simon.stahmer1@uni-oldenburg.de>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[lib]
name = "energyleaf_zb"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = 3

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.49", default-features = false }
tokio = { version = "1.39.2", features = ["io-std", "macros", "mio", "net", "rt", "sync", "rt-multi-thread"] }
anyhow = "1.0.86"
embedded-svc = "0.28.0"
esp-idf-sys = "0.35.0"
time = "0.3.36"

[build-dependencies]
embuild = "0.32.0"
[[package.metadata.esp-idf-sys.extra_components]]
component_dirs = ["components"]
bindings_header = "src/bindings.h"